# adsorption

./: README.md  ads_data.py  pyproject.toml  setup.py  test_adsorption.ipynb  test_adsorption.py
adsorption/: __init__.py  ads_data.py  adsorption.py  models.py
examples/: run_adsorption_dynamics.py  run_adsorption_enth_Vant_Hoff.py  run_arrhenius.py  run_isosteric_heat.py  run_isotherms.py  run_kinetics.py  run_scale_up.py
