[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsorption"
version = "0.1.0"
description = "Adsorption models and utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "pandas", "matplotlib"]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest"]
